fix TeX in accordance to teacher requests

--- a/Memoir/main.tex
+++ b/Memoir/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
-\title{Langton's ant \\ \large Initiation à la recherche en informatique}
+\title{Langton's ant \\  \LARGE Université Sorbonne Paris Nord \\ \large Initiation à la recherche en informatique}
 \author{Gianluca BOTTIGLIERI, Naila BOUZERAR, \\ Mustapha DJEROUA, Name SURNAME, Name SURNAME}
 \date{\today}
 
@@ -19,21 +19,37 @@
 
 \section{Introduction}
 \subsection{Overview}
+\subsection{Historical background}
 \subsection{Contents of the report}
 
 \section{Technical prerequisite topics}
 \subsection{Turing machine}
 \subsubsection{Universality}
-\subsubsection{Cellular automaton}
+\subsection{Cellular automaton}
 \subsection{Entropy}
 \subsection{Attractor}
 
 \section{State of the art}
-\subsection{Historical background}
 \subsection{Analysis of behaviour}
 \subsection{Algorithmic developments}
 \subsection{Recent findings}
 \subsection{Open questions}
+
+\section{Explorative work}
+\subsection{Problem on finite grids with wrap-around}
+\subsection{Reason for choice}
+\subsection{Related concepts}
+\subsubsection{Torus}
+\subsubsection{Coupon collector}
+\subsubsection{Markov chain}
+\subsection{Experiment}
+\subsection{Results}
+\subsection{Analysis of results and discussion}
+
+\section{Code of experiment}
+\subsection{GUI code}
+\subsection{Simulation code}
+\subsection{Plotting code}
 
 \section{Related topics}
 \subsection{Other cellular automatons}
@@ -43,24 +59,10 @@
 \subsubsection{Different grids}
 \subsection{Busy beaver problem}
 
-\newpage
-
-\section{Explorative work}
-\subsection{Problem on finite grids with wrap-around}
-\subsection{Reason for choice}
-\subsection{Related concepts}
-\subsection{Torus}
-\subsubsection{Hamiltonian path}
-\subsubsection{Coupon collector}
-\subsubsection{Markov chain}
-\subsection{Experiment}
-\subsection{Results}
-\subsection{Analysis of results and discussion}
 
 \section{Conclusion}
 
 
-\section{Annexes}
-\subsection{Graphs from case study}
+\section{Bibliography}
 
 \end{document}
