--- a/Memoir/main.tex
+++ b/Memoir/main.tex
@@ -19,13 +19,42 @@
 
 \section{Introduction}
 \subsection{Overview}
+Langton's ant is a two-dimensional universal Turing machine with a very simple set of rules but complex emergent behavior. 
+An "ant" moves on a grid of cells that can be either white or black: depending on the color of the cell it stands on, the ant 
+inverts the color of the cell it stands on at the start and then moves in a certain direction or in the opposite one depending
+on the original color of the starting cell. 
+The first few thousands moves produce simple patterns that are often symmetric and repetitive, but after around 11000 moves 
+the ant starts moving in a repetitive manner, creating a "highway" pattern that keeps repeating itself indefinitely.
+
 \subsection{Historical background}
+Langton's ant was invented by Chris Langton in 1986 while he was a graduate student at the University of Michigan.
+It is one of the first and most famous examples of artificial life: in the 40 years that followed, it gave birth to multiple 
+variations, ranging from version with multiple colors, to multiple ants, to different shapes of grids and cells, and it's still object 
+of research and debate among computer scientist.
+
 \subsection{Contents of the report}
+The goal of this paper is to give the reader the tools to summarily understand the problem to then introduce an overview of the state of the art 
+of Langton's ant and to finally present the results of an experiment we conducted on a finite, all-white starting grid with wrap-around properties.
+The main goal of our explorative work was to observe the properties of the problem in a more limited and less studied scenario to try and derive some interesting
+conclusions, familiarising with rigorous formulation of properties, simulations, data collection, data analysis and hypothesis formulation.
+
+Section 2 consists of a series of simple explaination of fundamental concepts behind the problem.
+
+Section 3 is a brief overview of the state of the art of Langton's ant, with a final part focused on the most recent findings and open questions.
+
+Section 4 is the core of the paper, where we present our experiment, the results and the analysis of the results.
+
+Section 5 is a brief overview of the code we used to conduct the experiment.
+
+Section 6 is a brief overview of related topics.
+
+Section 7 constitutes the conclusion of the paper and includes our hypothesis and further questions.
 
 \section{Technical prerequisite topics}
 \subsection{Turing machine}
 \subsubsection{Universality}
-\subsection{Cellular automaton}
+\subsection{Artificial life}
+\subsubsection{Cellular automaton}
 \subsection{Entropy}
 \subsection{Attractor}
 
