updated structure TeX adding proof

--- a/Memoir/main.tex
+++ b/Memoir/main.tex
@@ -42,13 +42,15 @@ Section 2 consists of a series of simple explaination of fundamental concepts be
 
 Section 3 is a brief overview of the state of the art of Langton's ant, with a final part focused on the most recent findings and open questions.
 
-Section 4 is the core of the paper, where we present our experiment, the results and the analysis of the results.
+Section 4 is an explanation of the proof of the universality of Langton's ant.
 
-Section 5 is a brief overview of the code we used to conduct the experiment.
+Section 5 is the core of the paper, where we present our experiment, the results and the analysis of the results.
 
-Section 6 is a brief overview of related topics.
+Section 6 is a brief overview of the code we used to conduct the experiment.
 
-Section 7 constitutes the conclusion of the paper and includes our hypothesis and further questions.
+Section 7 is a brief overview of related topics.
+
+Section 8 constitutes the conclusion of the paper and includes our hypothesis and further questions.
 
 \section{Technical prerequisite topics}
 \subsection{Turing machine}
@@ -63,6 +65,8 @@ Section 7 constitutes the conclusion of the paper and includes our hypothesis an
 \subsection{Algorithmic developments}
 \subsection{Recent findings}
 \subsection{Open questions}
+
+\section{Proof of universality}
 
 \section{Explorative work}
 \subsection{Problem on finite grids with wrap-around}
