--- a/Memoir/main.tex
+++ b/Memoir/main.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 
 \title{Langton's ant \\  \LARGE Université Sorbonne Paris Nord \\ \large Initiation à la recherche en informatique}
-\author{Gianluca BOTTIGLIERI, Naila BOUZERAR, \\ Mustapha DJEROUA, Name SURNAME, Name SURNAME}
+\author{BENHADID Ayman, BOTTIGLIERI Gianluca, \\ BOULFRAD Imam, BOUZERAR Naila,  DJEROUA Mustapha}
 \date{\today}
 
 \begin{document}
@@ -27,12 +27,17 @@ The first few thousands moves produce simple patterns that are often symmetric a
 the ant starts moving in a repetitive manner, creating a "highway" pattern that keeps repeating itself indefinitely.
 
 \subsection{Historical background}
-Langton's ant was invented by Chris Langton in 1986 while he was a graduate student at the University of Michigan.
-It is one of the first and most famous examples of artificial life: in the 40 years that followed, it gave birth to multiple 
-variations, ranging from version with multiple colors, to multiple ants, to different shapes of grids and cells, and it's still object 
-of research and debate among computer scientist.
+Langton's ant was invented by Chris Langton in 1986 while he was a graduate student at the University of Michigan and it is one of the first 
+and most famous examples of artificial life: in the 40 years that followed, it gave birth to multiple  variations, ranging from version with 
+multiple colors, to multiple ants, to different shapes of grids and cells, and it's still object of research and debate among computer scientist.
+The field of artificial life, of which Langton himself is considered one of the founders, brought to the light concepts like 
+the one of cellular automata, mathematical models that nowadays are used to model complicated, non-linear, systems, in fields including but not limited to physics,
+chemistry, biology, meteorology, cosmology, computational science and engineering. By asking questions about the nature of life and the possible
+behaviours life forms could have, simulating them, observing patterns and formulating hypothesis based on them, scientists have managed to 
+advance understanding of actual, real life forms dramatically. For example, we now know that plants regulate their intake and loss of gases 
+via a cellular automaton mechanism where each stoma on the leaf acts as a cell.
 
-\subsection{Contents of the report}
+\subsection{Contents of this report}
 The goal of this paper is to give the reader the tools to summarily understand the problem to then introduce an overview of the state of the art 
 of Langton's ant and to finally present the results of an experiment we conducted on a finite, all-white starting grid with wrap-around properties.
 The main goal of our explorative work was to observe the properties of the problem in a more limited and less studied scenario to try and derive some interesting
