minor change section 1.2

--- a/Memoir/main.tex
+++ b/Memoir/main.tex
@@ -31,11 +31,12 @@ Langton's ant was invented by Chris Langton in 1986 while he was a graduate stud
 and most famous examples of artificial life: in the 40 years that followed, it gave birth to multiple  variations, ranging from version with 
 multiple colors, to multiple ants, to different shapes of grids and cells, and it's still object of research and debate among computer scientist.
 The field of artificial life, of which Langton himself is considered one of the founders, brought to the light concepts like 
-the one of cellular automata, mathematical models that nowadays are used to model complicated, non-linear, systems, in fields including but not limited to physics,
+the one of cellular automata, mathematical models that nowadays are used to model complicated, non-linear systems, in fields including but not limited to physics,
 chemistry, biology, meteorology, cosmology, computational science and engineering. By asking questions about the nature of life and the possible
 behaviours life forms could have, simulating them, observing patterns and formulating hypothesis based on them, scientists have managed to 
 advance understanding of actual, real life forms dramatically. For example, we now know that plants regulate their intake and loss of gases 
-via a cellular automaton mechanism where each stoma on the leaf acts as a cell.
+via a cellular automaton mechanism where each stoma on the leaf acts as a cell, and we currently use probabilistic cellular automata 
+in statistical and condensed matter physics to study phenomena like fluid dynamics and phase transitions.
 
 \subsection{Contents of this report}
 The goal of this paper is to give the reader the tools to summarily understand the problem to then introduce an overview of the state of the art 
